fix: x-scrollbar appear if y-scrollbar appear

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,6 @@ code {
   flex: 1 1 auto;
   flex-direction: column;
   align-items: center;
-  min-width: 100vw;
   min-height: 100vh;
   background-color: #282c34;
 }
